Move to a standard structure

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: Isoworlds
 version: @version@
-main: bukkit.IsoworldsBukkit
+main: fr.isolonice.isoworld.Isoworld
 authors: [Sythiel]
 description: Large scale personal world manager
 load: STARTUP
